2017-07-16  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-canonicalize-url): Make scheme default to https, not http.
	[emacs-w3m:12749]

2017-07-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-delete-frames-and-windows): Replace `one-window-p'
	with a custom function that works for unselected windows as well.

2017-07-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-delete-frames-and-windows): Work for Emacs on tty;
	always delete w3m windows if possible ([emacs-w3m:12733]).
	* w3m.el (w3m-select-buffer-delete-buffer):
	No need to wind up selection buffer when quitting.

2017-07-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-show-form-hint): Clarify echo message.
	* w3m-form.el (w3m-form-expand-form, w3m-form-unexpand-form):
	Work for mouse-clicking ([emacs-w3m:12731]).

2017-07-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-show-form-hint): Expand form so at to show text fully.
	* w3m-form.el (w3m-form-input): Revert 2017-06-30 change.
	(w3m-form-expand-form, w3m-form-unexpand-form): New functions.
	[emacs-w3m:12728]

2017-07-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-input-textarea-mode-hook): Fix mismatched paren;
	use outline-show-all instead of show-all if available.

2017-07-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-content-type-alist): Use mailcap.
	(w3m-image-viewer): Abolish.
	(w3m-create-page): Allow user to download file of unknown content-type.

2017-06-30  Vladimir Sedach  <vas@oneofus.la>

	* w3m-form.el (w3m-form-input): If input is readonly, put the input
	value on the kill ring in addition to displaying it in the echo area.
	[emacs-w3m:12724]

2017-06-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-w3m.el, w3m-antenna.el, w3m-bookmark.el, w3m-cookie.el,
	w3m-dtree.el, w3m-ems.el, w3m-favicon.el, w3m-filter.el, w3m-form.el,
	w3m-namazu.el, w3m-perldoc.el, w3m-search.el, w3m-session.el,
	w3m-symbol.el, w3m.el:
	Remove `:size 0' from defcustoms ([emacs-w3m:12709]).
