@@ -484,60 +484,60 @@ href=\"#\\([a-z][-.0-9:_a-z]*\\)\"" nil t)
   "Substitute disabled attr with readonly attr in forms."
   (let ((case-fold-search t) st opt nd val default)
     (goto-char (point-min))
-    (while (and (re-search-forward "\
+    (while (re-search-forward "\
 <\\(?:input\\|\\(option\\)\\|textarea\\)[\t\n ]" nil t)
-		(progn
-		  (setq st (match-beginning 0)
-			opt (match-beginning 1))
-		  (search-forward ">" nil t))
-		(progn
-		  (setq nd (match-end 0))
-		  (goto-char st)
-		  (re-search-forward "[\t\n ]\
+      (setq st (match-beginning 0)
+	    opt (match-beginning 1))
+      (when (and (search-forward ">" nil t)
+		 (progn
+		   (setq nd (match-end 0))
+		   (goto-char (1+ st))
+		   (re-search-forward "[\t\n ]\
 \\(?:\\(disabled\\(=\"[^\"]+\"\\)?\\)\\|\\(readonly\\(?:=\"[^\"]+\"\\)?\\)\\)"
-				     nd t)))
-      (setq val (if (match-beginning 1)
-		    (if (match-beginning 2)
-			"readonly=\"readonly\""
-		      "readonly")
-		  (match-string 3)))
-      (if opt
-	  ;; Unfortunately w3m doesn't support readonly attr in select forms,
-	  ;; so we replace them with read-only input forms.
-	  (if (and (re-search-backward "<select[\t\n ]" nil t)
-		   (w3m-end-of-tag "select")
-		   (< st (match-end 0)))
-	      (save-restriction
-		(narrow-to-region (match-beginning 0) (match-end 0))
-		(goto-char (+ (match-beginning 0) 8))
-		(w3m-parse-attributes (id name)
-		  (if (and id name)
-		      (progn
-			(goto-char (point-min))
-			(setq default
-			      (when (re-search-forward "<option\
+				      nd t)))
+	(setq val (if (match-beginning 1)
+		      (if (match-beginning 2)
+			  "readonly=\"readonly\""
+			"readonly")
+		    (match-string 3)))
+	(if opt
+	    ;; Unfortunately w3m doesn't support readonly attr in `select'
+	    ;; forms, so we replace them with read-only input forms.
+	    (if (and (re-search-backward "<select[\t\n ]" nil t)
+		     (w3m-end-of-tag "select")
+		     (< st (match-end 0)))
+		(save-restriction
+		  (narrow-to-region (match-beginning 0) (match-end 0))
+		  (goto-char (+ (match-beginning 0) 8))
+		  (w3m-parse-attributes (id name)
+		    (if (and id name)
+			(progn
+			  (goto-char (point-min))
+			  (setq default
+				(when (re-search-forward "<option\
 \\(?:[\t\n ]+[^\t\n >]+\\)*[\t\n ]selected\\(?:=\"[^\"]+\"\\)?\
 \\(?:[\t\n ]+[^\t\n >]+\\)*[\t\n /]*>[\t\n ]*\\([^<]+\\)" nil t)
-				(goto-char (match-end 1))
-				(skip-chars-backward "\t\n ")
-				(buffer-substring (match-beginning 1) (point))))
-			(delete-region (point-min) (point-max))
-			(insert "<input id=\"" id "\" name=\"" name "\""
-				(if default
-				    (concat " value=\"" default "\" ")
-				  " ")
-				val
-				;; Fit the width to that of the select form.
-				" size=\"13\">"))
-		    (goto-char (point-max)))))
-	    (goto-char nd))
-	(if (match-beginning 1)
-	    (save-restriction
-	      (narrow-to-region st nd)
-	      (delete-region (goto-char (match-beginning 1)) (match-end 1))
-	      (insert val)
-	      (goto-char (point-max)))
-	  (goto-char nd))))))
+				  (goto-char (match-end 1))
+				  (skip-chars-backward "\t\n ")
+				  (buffer-substring (match-beginning 1)
+						    (point))))
+			  (delete-region (point-min) (point-max))
+			  (insert "<input id=\"" id "\" name=\"" name "\""
+				  (if default
+				      (concat " value=\"" default "\" ")
+				    " ")
+				  val
+				  ;; Fit the width to that of the select form.
+				  " size=\"13\">"))
+		      (goto-char (point-max)))))
+	      (goto-char nd))
+	  (if (match-beginning 1)
+	      (save-restriction
+		(narrow-to-region st nd)
+		(delete-region (goto-char (match-beginning 1)) (match-end 1))
+		(insert val)
+		(goto-char (point-max)))
+	    (goto-char nd)))))))
 
 (defun w3m-filter-fix-tfoot-rendering (url &optional recursion)
   "Render <tfoot>...</tfoot> after <tbody>...</tbody>."
