@@ -1,3 +1,8 @@
+2017-07-20  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-filter.el (w3m-filter-subst-disabled-with-readonly):
+	Work for two or more disabled tags.
+
 2017-07-16  Boruch Baum  <boruch_baum@gmx.com>
 
 	* w3m.el (w3m-canonicalize-url): Make scheme default to https, not http.
